id:5027 Fix spacing in collapsigle item title.

--- a/dev/sass/qwiki/_collapsible_item.scss
+++ b/dev/sass/qwiki/_collapsible_item.scss
@@ -3,12 +3,20 @@
     border-radius: $ma-border-radius;
     margin-bottom: rem-calc(16);
 }
+.ma-collapsible-header-drop-zone {
+    min-height: rem-calc(50);
+}
 .ma-simple-item-title,
 .ma-collapsible-item-title {
+    padding: rem-calc(0 4 0 4);
     background-color: $ma-sand;
     border-top-left-radius: $ma-border-radius;
     border-top-right-radius: $ma-border-radius;
     height: rem-calc(56);
+    .ma-remove-cell,
+    .ma-toggle-cell {
+        padding: rem-calc(0 4 0 4);
+    }
     h3 {
         margin-top: 0;
         padding-left: rem-calc(17);
@@ -43,7 +51,12 @@ i.ma-status-dot {
 .ma-collapsible-item-title-left,
 .ma-simple-item-title-left {
     height: 100%;
-    margin-left: rem-calc(32);
+    .handle-spacer {
+      padding-left: rem-calc(19);
+    }
+    .ma-type-icon {
+      padding-left: rem-calc(8);
+    }
 }
 .ma-collapsible-item-content {
     padding: rem-calc(24 24 - map-get($grid-container-padding,medium)/2);
